# qaddapp

./: .gitignore  readme.md
appimage/: AppRun  QAddApp.desktop  make_appimage.sh  qaddapp.desktop
source/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pathinput.cpp  pathinput.h  resources.qrc
source/.cache/clangd/index/: main.cpp.BACD42A1797CD90B.idx
